--- a/style/about.css
+++ b/style/about.css
@@ -98,6 +98,14 @@ time, mark, audio, video {
           flex-direction: column;
           flex-wrap: wrap;
       }
+      #about-text{
+        font-size: 1.25em;
+        margin: 1em;
+      }
+      #list{
+        font-size: 1.25em;
+        margin: 1em;
+      }
       #footer-box{
           background:#cbc8cc;
       }
