--- a/style/contact.css
+++ b/style/contact.css
@@ -28,4 +28,96 @@ time, mark, audio, video {
       body{
         font-family:"Courier New", Courier, monospace;
       }
-      
+
+      #header-box{
+        display: flex;
+        flex-direction: column;
+        background:#cbc8cc;
+        padding: 1em;
+      }
+      #contact-header{
+        font-size: 3em;
+      }
+      .nav-bar{
+        display:flex;
+        flex-wrap: wrap;
+        padding: 1em;
+      }
+      nav{
+        display:flex;
+      }
+      #home{
+        padding: 1em;
+        margin: 0 1em;
+        background-color: #c483de;
+        text-decoration: none;
+        color: white;
+        border-radius: 1.5em;
+      }
+      #home:hover{
+        background:white;
+        color:#c483de;
+      }
+      #about{
+        padding: 1em;
+        margin: 0 1em;
+        background-color: #c483de;
+        text-decoration: none;
+        color: white;
+        border-radius: 1.5em;
+      }
+      #about:hover{
+        background:white;
+        color:#c483de;
+      }
+      #contact{
+        padding: 1em;
+        margin: 0 1em;
+        background-color: #c483de;
+        text-decoration: none;
+        color: white;
+        border-radius: 1.5em;
+      }
+      #contact:hover{
+        background:white;
+        color:#c483de;
+      }
+      #projects{
+        padding: 1em;
+        margin: 0 1em;
+        background-color: #c483de;
+        text-decoration: none;
+        color: white;
+        border-radius: 1.5em;
+      }
+      #projects:hover{
+        background:white;
+        color:#c483de;
+      }
+      #contact-info{
+        display:flex;
+        flex-direction:column;
+        border: 2px solid black;
+        padding: 2em;
+      }
+      #twitter{
+        padding:2em;
+      }
+      #tweet{
+        height:10%;
+        width:10%;
+      }
+      #linkedin{
+        padding: 2em;
+      }
+      #link{
+        height:10%;
+        width:10%;
+      }
+      #footer-box{
+        background:#cbc8cc;
+    }
+    #footer-text{
+      padding-left: 7em;
+      padding-top: 2em;
+    }
