--- a/style/index.css
+++ b/style/index.css
@@ -200,3 +200,27 @@ time, mark, audio, video {
         background:#cbc8cc;
         height: 10em;
       }
+      @media (max-width: 800px){
+        body{
+           display:flex;
+           flex-direction: column;
+           width:80%;
+        }
+        #content-area2{
+          display:flex;
+          flex-direction: column;
+          width:80%;
+        }
+      }
+      @media (max-width: 500px){
+        body{
+          display:flex;
+          flex-direction: column;
+          width:60%;
+        }
+        #content-area2{
+          display:flex;
+          flex-direction: column;
+          width:60%;
+        }
+      }
