--- a/style/index.css
+++ b/style/index.css
@@ -202,9 +202,9 @@ time, mark, audio, video {
       }
       @media (max-width: 800px){
         body{
-           display:flex;
-           flex-direction: column;
-           width:100%;
+          display:flex;
+          flex-direction: column;
+          width:100%;
         }
         #header-box{
           display:flex;
@@ -221,9 +221,20 @@ time, mark, audio, video {
           flex-direction: column;
           width:100%;
         }
+
       }
       @media (max-width: 500px){
         body{
+          display:flex;
+          flex-direction: column;
+          width:100%;
+        }
+        #header-box{
+          display:flex;
+          flex-direction: column;
+          width:100%;
+        }
+        #content-area{
           display:flex;
           flex-direction: column;
           width:60%;
