--- a/style/index.css
+++ b/style/index.css
@@ -146,11 +146,7 @@ time, mark, audio, video {
         text-align: left;
       }
       .project-images{
-        border: 2px black solid;
-        width: 25em;
-        height: 20em;
-        margin: 2em;
-        margin-bottom: 5em;
+        width: 44%;
       }
       #content-area2 .project-images a{
         text-decoration: none;
@@ -198,7 +194,7 @@ time, mark, audio, video {
         align-items: center;
         padding: 1em;
         background:#cbc8cc;
-        height: 10em;
+        height: 5%;
       }
       @media screen and (max-width: 800px){
         body{
@@ -220,12 +216,12 @@ time, mark, audio, video {
         }
         img{
           display:flex;
-          width:100%;
-          height:100%;
-          padding-left: 4em;
+          width:50%;
+          height: 50%;
+          padding-left: 1%;
         }
         #project-images2{
-          width:70%;
+          display:flex;
         }
         #content-area2{
           display:flex;
@@ -233,7 +229,9 @@ time, mark, audio, video {
           width:100%;
         }
         .project-images{
-          width: 50%;
-          height: 50%;
+          display: flex;
+          flex-wrap: wrap;
+          width: 25%;
+          padding: 2%;
         }
       }
